# colorism

./: Cargo.toml  README.md
src/: lib.rs
src/background/: mod.rs
src/foreground/: mod.rs
src/util/: mod.rs
tests/: colors_test.rs
